# super-mcp

./: .dockerignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile  LICENSE  MVP_SPEC.md  README.md  docker-compose.yml  mcp.json  pyproject.toml  requirements-dev.txt  requirements.txt  template.yaml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: claude-code-build.yml  dev-workflow.yml
layers/super/: Makefile
scripts/: deploy.sh  docker-run.sh
src/: mcp_server.py  query_processor.py  s3_helper.py  super_executor.py
tests/: conftest.py  test_integration.py  test_mcp_server.py  test_query_processor.py  test_s3_helper.py  test_super_executor.py
