[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3-super-mcp-server"
version = "1.0.0"
description = "MCP Server for S3 data analytics using super library"
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "aws-lambda-powertools>=2.30.0",
    "pydantic>=2.5.0",
    "asyncio-throttle>=1.0.2",
    "python-dateutil>=2.8.2"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "moto>=4.2.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0"
]